# Agentic-PF-optimizer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  build.sh  docker-compose.yml  pyproject.toml  start.sh
src/backend/: .dockerignore  Makefile  pyproject.toml  requirements.txt  ty.toml
src/backend/.ropeproject/: autoimport.db
src/backend/silveragents/: main.py
src/backend/silveragents/agents/: chat_agent.py  portfolio_agent.py  session_storage.py  tools.py  utils.py
src/backend/silveragents/agents/core/: vector_store.py
src/backend/silveragents/agents/modules/: __init__.py  entity_extractor.py  form_preparer.py  intent_classifier.py  portfolio_operations.py  response_generator.py  workflow_utils.py
src/backend/silveragents/agents/services/: __init__.py  portfolio_service.py  vector_store.py
src/backend/silveragents/agents/state/: agent.py  chat_state.py  news.py
src/backend/silveragents/auth/: dependencies.py  security.py
src/backend/silveragents/auth/models/: token.py  user.py
src/backend/silveragents/config/: langfuse.py  prompts.py
src/backend/silveragents/db/: base.py
src/backend/silveragents/db/models/: __init__.py  alert.py  asset.py  digest.py  newsitem.py  portfolio.py  user.py
src/backend/silveragents/logs/: config.py
src/backend/silveragents/models/: agent_state.py  analysis.py  assets.py  chat.py  chat_api.py  portfolio.py  portfolio_requests.py  portfolio_responses.py  responses.py
src/backend/silveragents/routers/: __init__.py  auth.py  chat.py  digest.py  portfolio.py
src/backend/silveragents/silveragents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/backend/tests/: conftest.py  news_search_tool.py  test_chat_agent.py  test_chat_flow.py  test_integration.py  test_portfolio_agent.py
(+166 files in other folders)
